Recysell/src/main/java/com/example/Recysell/error/NotFoundException.java
package com.example.Recysell.error;

public class NotFoundException extends RuntimeException{
    public NotFoundException(String message) {
        super(message);
    }
}
